SF Primes/src/objects/ADP_Product_Solution__c.object
<CustomObject>
    <description>List of product solutions used for competitive products.</description>
    <fields>
        <fullName>ADP_Product_Solution_ID__c</fullName>
        <externalId>true</externalId>
        <label>ADP Product Solution ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADP_Product_Solution_Sub_Dept__c</fullName>
        <label>ADP Product Solution Sub-Dept</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ADP_Product_Solution_Type__c</fullName>
        <label>ADP Product Solution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Document Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I/Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lasers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mfg. Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name File Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts Inventory Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle/Unit Management</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ADP Product Solution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ADP_Product_Solution_ID__c</columns>
        <columns>NAME</columns>
        <columns>ADP_Product_Solution_Type__c</columns>
        <columns>ADP_Product_Solution_Sub_Dept__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ADP Product Solution</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADP Product Solution</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>